--- a/src/components/dashboard/Dashboard.scss
+++ b/src/components/dashboard/Dashboard.scss
@@ -5,16 +5,18 @@
 // ---------------------
 
 .board-layout {
-  // background: green;
   width: 100%;
-  height: 95.5vh;
-  @include flex-mix(row, flex-start, center);
+  // background: green;
+  margin-top: 13.5vh;
+  @include flex-mix(row, center, flex-start);
   flex-wrap: nowrap;
 }
 .content-container {
-  width: 90vw;
+  // background: red;
+  width: 98%;
   height: 100%;
-  @include flex-mix(column, flex-start, center);
+  // overflow: scroll;
+  // @include flex-mix(column, flex-start, center);
 }
 .content-header {
   color: darken(white, 8%);
@@ -30,10 +32,8 @@
 }
 .content {
   width: 100%;
-  height: 93.2vh;
   @include flex-mix(row, flex-start, center);
   flex-wrap: nowrap;
-  overflow: hidden;
 }
 
 .section-01, 
@@ -42,11 +42,10 @@
   height: 100%;
 }
 .section-01 {
-  width: 50%;
+  width: 100%;
   border-right: 0.5px solid #ccc;
   display: flex;
   flex-direction: column;
-  overflow-y: auto;
 }
 .section-02 {
   width: 25%;
@@ -62,27 +61,15 @@
   justify-content: space-around;
 }
 
-@media (max-width: 650px) {
+
+@media (min-width: 50em ) {
+  .board-layout {
+    margin-top: 1.8em;
+  }
   .content {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    overflow-y: scroll;
-  }
-  .content-container {
-    width: 70vw;
-  }
-  .section-01 {
-    width: 100%;
-    height: 100vh;
-  }
-  .section-02 {
-    width: 100%;
-  }
-  .section-03 {
-    display: none;
+    height: 94vh;
+    overflow: scroll;
   }
 }
-
 
 
