--- a/src/components/clock/Clock.scss
+++ b/src/components/clock/Clock.scss
@@ -2,18 +2,20 @@
 
 .clock {
   font-weight: 300;
-  @include flex-mix(row, center, center);
-  width: 20%;
+  @include flex-mix(row, flex-start, center);
+  width: 100vw;
   .pulse {
     width: 14px;
     height: 14px;
-    margin: 0px 6px;
+    margin: 0px 5px;
+    padding: 2px;
     background: limegreen;
     text-align: center;
     border-radius: 50%;
     animation: glow 3s linear infinite;
   }
 }
+
 @keyframes glow {
   0% {
     box-shadow: 0px 0px 0px 0px rgba(90, 215, 90, 0.7);
@@ -29,9 +31,9 @@
   }
 }
 
-@media (max-width: 650px) {
+@media (min-width: 13.5em) {
   .clock {
-    width: 100%;
-    text-align: center;
+    justify-content: center;
   }
 }
+
