--- a/src/components/navigation/Navigation.scss
+++ b/src/components/navigation/Navigation.scss
@@ -3,32 +3,97 @@
 // =====================
 // USER BAR
 // ---------------------
+.nav-container {
+  top: 0;
+  position: fixed;
+}
 .userbar {
   color: $eighty-white;
-  width: 100%;
-  height: 4.5vh;
-  padding: 0px 5px;
+  width: 100vw;
+  padding: 5px;
   background: darken($shade-black, 10%);
-  font-weight: 300;
-  letter-spacing: 0.6px;
-  border-bottom: 1px solid limegreen;
+  box-sizing: border-box;
+  font-weight: 400;
+  letter-spacing: 0.03em;
+  border-bottom: 2px solid limegreen;
   @include flex-mix(row, space-between, center);
 }
-.user {
-  cursor: pointer;
-  font-weight: bold;
-  padding-right: 20px;
-  @include flex-mix(row, space-between, center);
-  i {
-    padding: 0px 10px;
+// =====================
+// SLIDE NAV BAR
+// ---------------------
+.slide-nav {
+  width: 100vw;
+  transition: height 0.4s ease-in-out;
+  background-color: darken($shade-black, 10%);
+  @include flex-mix(column, flex-start, flex-start);
+}
+.button-container {
+  width: 100%;
+  height: 8vh;
+  @include flex-mix(row, flex-start, center);
+  h3 {
+    color: rgba(250, 250, 250, 0.85);
+    margin: 7px 0px 0px 16px;
+    font-size: 3em;
+    font-family: 'Arizonia', cursive;
   }
+}
+.slide-nav .side-btn {
+  border: 1px solid lightgray;
+  margin-top: 1%;
+  margin-left: 1%;
+  border-radius: 4px;
+  background-color: darken($shade-black, 10%);
+  i {
+    color: limegreen;
+    margin: 0 auto;
+    padding: 0;
+  }
+}
+.break {
+  width: 100%;
+}
+.slidenav-menu {
+  width: 100vw;
+  height: 80%;
+  @include flex-mix(column, space-around, flex-start);
+  a {
+    text-decoration: none;
+    list-style-type: none;
+  }
+  li {
+    color: limegreen;
+    width: 100%;
+    padding: 5px;
+    margin-left: 10px;
+    flex-wrap: wrap;
+    font-size: 1.5em;
+    font-weight: 300;
+    border-left: 0.04em solid lightgray;
+  }
+}
+.social-media {
+  @include flex-mix(row, space-around, center);
+  color: limegreen;
+}
+.site-links {
+  transition: display 2.5s ease-in-out;
+  ul {
+    height: 70vh;
+  }
+}
+.show {
+  display: block;
+}
+.hide {
+  display: none;
 }
 // =====================
 // SIDE BAR
 // ---------------------
 .sidebar {
-  width: 10vw;
-  height: 100%;
+  width: 12%;
+  height: 96vh;
   background: darken($shade-black, 10%);
   border-right: 1px solid limegreen;
   @include flex-mix(column, flex-start, center);
@@ -92,9 +157,3 @@
 #circle9 { color: #ffc048; }
 #circle10 { color: #1dd1a1; }
 
-
-@media (max-width: 650px) {
-  .sidebar {
-    width: 30vw;
-  }
-}
