--- a/src/index.scss
+++ b/src/index.scss
@@ -5,11 +5,6 @@
 
 
 
-body {
-  width: 100%;
-  overflow: hidden;
-  box-sizing: border-box;
-  font-family: 'Roboto-Condensed', sans-serif;
+body { 
+  font-family: 'Roboto Condensed', sans-serif;
 }
-
-
