--- a/src/components/dashboard/Dashboard.scss
+++ b/src/components/dashboard/Dashboard.scss
@@ -21,13 +21,14 @@
 .content-header {
   color: darken(white, 8%);
   width: 100%;
-  height: 2vh;
+  // height: 2vh;
+  padding: 6px;
   background: darken($shade-black, 5%);
   font-weight: 300;
   letter-spacing: 0.5px;
   @include flex-mix(row, flex-start, center);
   h5 {
-    padding: 10px;
+    padding-top: 3px;
   }
 }
 .content {
